--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -11,6 +11,10 @@
     {
       "route": "/*",
       "allowedRoles": ["anonymous"]
+    },
+    {
+      "route": "/api/*",
+      "allowedRoles": ["anonymous"]
     }
   ]
 }
